[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/godot/splash.png" type="Texture" id=1]
[ext_resource path="res://loading_screen/loading_screen.gd" type="Script" id=2]
[ext_resource path="res://loading_screen/loading_screen_shader.tres" type="Shader" id=3]
[ext_resource path="res://assets/misc/progress_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/misc/Hold trigger to continue.png" type="Texture" id=5]
[ext_resource path="res://addons/godot-xr-tools/misc/hold_button.tscn" type="PackedScene" id=6]

[sub_resource type="Curve" id=21]
max_value = 3.14
_data = [ Vector2( 0.00207039, 0 ), 0.0, 1.00884, 0, 0, Vector2( 1, 3.14 ), 0.313348, 0.0, 0, 0 ]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 80, 60 )

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=18]
shader = ExtResource( 3 )
shader_param/bar_color = Color( 1, 1, 1, 1 )
shader_param/cutout = Vector3( 4.85, 0.33, 0 )
shader_param/progress = 0.5
shader_param/bar_texture = ExtResource( 4 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 18 )
size = Vector2( 10, 1 )

[sub_resource type="QuadMesh" id=19]
size = Vector2( 9.25, 1 )

[sub_resource type="SpatialMaterial" id=20]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[node name="LoadingScreen" type="Spatial"]
script = ExtResource( 2 )
follow_speed = SubResource( 21 )
splash_screen = ExtResource( 1 )

[node name="SplashScreen" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 15, -50 )
mesh = SubResource( 2 )
material/0 = SubResource( 1 )

[node name="ProgressBar" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -10 )
mesh = SubResource( 3 )
material/0 = null

[node name="PressToContinue" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -10 )
visible = false
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="HoldButton" parent="PressToContinue" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.55766, 0, 0 )
hold_time = 0.5
color = Color( 0, 0.717647, 1, 1 )

[connection signal="pressed" from="PressToContinue/HoldButton" to="." method="_on_HoldButton_pressed"]
